style: apply consistent code formatting across the project